# shishabot

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust-clippy.yml
command-macros/src/: flags.rs  lib.rs
command-macros/src/msg_command/: mod.rs
command-macros/src/prefix/: command.rs
command-macros/src/slash_command/: mod.rs
migrations/: 20221130174149_base_schemas.up.sql  20221130212623_base_schemas.down.sql  20221130212623_base_schemas.up.sql
src/: beatmap_downloader.rs  checks.rs  logging.rs  main.rs  process_replays.rs  replay_queue.rs  server_settings.json  server_settings.rs  server_settings_struct.rs  streamable_wrapper.rs
src/commands/: addskin.rs  end.rs  help.rs  mod.rs  ping.rs  prefix.rs  queue.rs  settings.rs  settings_struct.rs  setup.rs  skinlist.rs  start.rs
src/commands/danser/: mod.rs  msg_cmd_test.rs  queue.rs  render.rs  render_from_bathbot_embed.rs  render_score.rs  skin_list.rs  test.rs
src/commands/danser/blacklist/: mod.rs
src/commands/danser/blacklist/server/: add.rs  mod.rs  remove.rs
src/commands/danser/settings/: copy.rs  default.rs  edit.rs  mod.rs  view.rs
src/commands/danser/setup/: input.rs  mod.rs  output.rs  view.rs
src/commands/danser/skin/: add.rs  list.rs  mod.rs  remove.rs
src/commands/help/: components.rs  interaction.rs  message.rs  mod.rs
src/commands/owner/: cache.rs  mod.rs
src/commands/utility/: command_count.rs  config.rs  invite.rs  mod.rs  ping.rs  prefix.rs  prune.rs  server_config.rs
src/core/: buckets.rs  cluster.rs  config.rs  logging.rs  mod.rs  replay_queue.rs  settings.rs  stats.rs
src/core/cache/: mod.rs  permissions.rs
src/core/commands/: checks.rs  flags.rs  mod.rs  origin.rs
src/core/commands/prefix/: mod.rs
src/core/commands/slash/: command.rs  mod.rs
src/core/context/: configs.rs  mod.rs  skin_list.rs
src/core/events/: mod.rs
src/core/events/interaction/: autocomplete.rs  command.rs  component.rs  modal.rs
src/core/events/message/: mod.rs
src/core/replay_queue/: data.rs  mod.rs  process.rs
src/custom_client/: mod.rs  multipart.rs
src/database/: mod.rs
src/database/impls/: blacklist.rs  mod.rs
src/database/models/: mod.rs  server_blacklist.rs
src/embeds/: mod.rs
src/embeds/utility/: command_counter.rs  config.rs  mod.rs  server_config.rs
src/error/: mod.rs
src/logs/: shishabot.log.2022-09-01
src/pagination/: command_count.rs  components.rs  mod.rs  skin_list.rs
src/pp/: mod.rs
src/util/: constants.rs  custom_upload_wrapper.rs  datetime.rs  hasher.rs  interaction.rs  levenshtein.rs  matcher.rs  mod.rs  numbers.rs  osu.rs  streamable_wrapper.rs
src/util/builder/: embed.rs  footer.rs
src/util/ext/: interaction_command.rs  map.rs  score.rs
src/util/query/: searchable.rs
