[package]
name = "danser-thing-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
bytes = { version = "1.0" }
dotenv = { version = "0.15" }
flexi_logger = { version = "0.22", features = ["colors", "compress"] }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
mime_guess = { version = "2.0", default-features = false }
once_cell = { version = "1.9" }
osu-db = { version = "*", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"]}
rosu-pp = { version = "0.4", features = ["async_tokio"] }
rosu-v2 = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json =  { version = "1.0" }
serenity = { version = "0.10", default-features = true, features = ["framework", "rustls_backend", "standard_framework"]}
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.0",default-features = true, features = ["macros", "process", "rt-multi-thread"] }
zip = { version = "0.5" }