[package]
name = "shishabot"
version = "0.1.0"
authors = ["mezodev0", "MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[dependencies]
base64 = { version = "0.13.0" }
bitflags = { version = "1.0" }
bytes = { version = "1.0" }
command-macros = { path = "./command-macros" }
dotenv = { version = "0.15" }
eyre = { version = "0.6" }
flexmap = { git = "https://github.com/MaxOhn/flexmap" }
flurry = { version = "0.4" }
futures = { version = "0.3", default-features = false }
http = { version = "0.2" }
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "tls12", "tokio-runtime", "webpki-tokio"] }
leaky-bucket-lite = { version = "0.5" }
once_cell = { version = "1.0" }
osu-db = { version = "0.3", default-features = false }
radix_trie = { version = "0.2" }
rand = { version = "0.8" }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "next", default-features = false }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "next", features = ["async_tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallstr = { version = "0.2", features = ["serde"] }
smallvec = { version = "1.0", features = ["serde"] }
sqlx = { version = "0.6.2",  features = ["macros", "postgres", "runtime-tokio-rustls"]}
time = { version = "0.3.14", features = ["macros", "parsing", "formatting"] }
tokio = { version = "1.20", default-features = false, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }
zip = { version = "0.5" }

twilight-gateway = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13" }
twilight-cache-inmemory = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13", default-features = false }
twilight-http = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13", default-features = false, features = ["rustls-webpki-roots"] }
twilight-interactions = { git = "https://github.com/MaxOhn/twilight-interactions", branch = "rkyv-13", default-features = false, features = ["derive"] }
twilight-model = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13", default-features = false }
twilight-standby = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13", default-features = false }
twilight-validate = { git = "https://github.com/MaxOhn/twilight", branch = "rkyv-13" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
